segundo pedido de cambios

--- a/style/case.css
+++ b/style/case.css
@@ -7,9 +7,10 @@
 body {
      background-color: #F6F6F6;
      color: black;
+     max-width: 100%;
 }
 
-.res {
+.resp {
     display: none;
 }
 
@@ -29,6 +30,16 @@ body {
     display: flex;
     flex-direction: column;
     padding-right: 5%;
+}
+
+.bodyCase .textCase .img1{
+    display: none;
+    max-height: 265px;
+    max-width: 397px;
+    filter: grayscale(1);
+    z-index: -1;
+    margin: 0 auto;
+    margin-bottom: 1rem;
 }
 
 .bodyCase .textCase p{
@@ -155,8 +166,16 @@ body {
         width: auto;
     }
 
+    .bodyCase .textCase .img1 {
+        display: block;
+    }
+
     .bodyCase .img {
         margin: 0 auto;
+    }
+
+    .bodyCase .img .img1 {
+        display: none;
     }
 
 }
@@ -171,7 +190,7 @@ body {
         display: none;
     }
 
-    .res {
+    .resp {
         display: block;
     }
 
@@ -191,6 +210,7 @@ body {
     }
 
     .logo,
+    .bodyCase .textCase .img1,
     .bodyCase .img img{
         max-width: 310px;
     }
