--- a/templates/nav.handlebars
+++ b/templates/nav.handlebars
@@ -1,8 +1,8 @@
         <div class="redes_container">
-            <div><img/></div>
+            <div><a href="index.html"><img src="img/isoNav.svg"/></a></div>
             <nav id="redes" class="redes">
                 <a class="ig" id="ig">instagram</a>
-                <a class="ld" id="ld">linkedin</a>
+                <a href="https://www.linkedin.com/company/w-world-consulting" target="_blank" class="ld" id="ld">linkedin</a>
                 <select name="" id="language" class="language" onchange="reloadPage()">
                     <option value="es">Español</option>
                     <option value="en">English</option>
@@ -11,7 +11,7 @@
         </div>
 
         <div class="main_container">
-            <h6 class="subtitle">W - World<span class="bold">Consulting.</span></h6>
+            <h6 class="subtitle"><a href="index.html">W - World<span class="bold">Consulting.</span></a></h6>
             <nav class="main_nav" id="main_nav">
                 <a class="home" id="home" href="index.html">{{{home}}}</a>
                 <a class="mision" id="mision" href="mission.html">{{{mision}}}</a>
