--- a/style/responsiveNav.css
+++ b/style/responsiveNav.css
@@ -8,7 +8,7 @@
 	 box-shadow: 0 0 65px 15px rgba(0, 0, 0, 0.2);
 	 overflow: hidden;
 	 border-radius: 3px;
-	 background: #f1f1f1;
+	 background: grey;
 }
 
 .window .header {
