--- a/style/style.css
+++ b/style/style.css
@@ -242,6 +242,7 @@ body {
   }
   .home_1 .container .title .responsive span {
     font-size: 6.5rem;
+    padding-left: 1rem;
   }
 
   .home_1 .container .title .default {
@@ -311,6 +312,7 @@ body {
 
   .home_1 .container .title .responsive span {
     font-size: 3rem;
+    padding-left: 0;
     margin: 0 auto;
   }
 
