--- a/style/person.css
+++ b/style/person.css
@@ -39,6 +39,7 @@
 .personContainer .text .personName {
     font-weight: 500;
     font-size: 1.2rem;
+    letter-spacing: 1px;
 }
 
 .personContainer .text .description {
