--- a/style/cases.css
+++ b/style/cases.css
@@ -61,6 +61,7 @@ body {
 .containerFlow .container_btn {
     width: 90%;
     max-width: 1200px;
+    background-color: transparent;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -131,6 +132,7 @@ body {
 }
 
 .container .case .caseImg .ivascular {
+    margin-top: 1rem;
     width: 18rem;
 }
 
@@ -139,6 +141,7 @@ body {
 }
 
 .container .case .caseImg .saludPrevent {
+    margin-top: 1rem;
     width: 19rem;
 }
 
