--- a/templates/case.handlebars
+++ b/templates/case.handlebars
@@ -14,7 +14,9 @@
         <article class="textCase">{{{texto}}}</article>
         <div class="img">
             {{{img1}}}
+            {{{copete1}}}
             {{{img2}}}
+            {{{copete2}}}
         </div>
     </section>
     <section class="infoNext">
