--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -2,7 +2,7 @@
         <article>
             {{{team_text_1}}}
         </article>
-        <div class="divider"></div>
+        <img src="img/teamImg1.png" alt="">
         <p>ALDP Program Boston Scientific.</p>
         <br>
         <br>
