--- a/style/mission.css
+++ b/style/mission.css
@@ -11,6 +11,7 @@
 
 .mission_2 .container {
     width: 80%;
+    max-width: 1000px;
     margin: 5% auto;
     display: flex;
     flex-direction: column;
