--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -34,11 +34,17 @@
       </footer>
 
       <div class="container">
-        <h1>
+        <h1 class="def">
             {{{h1}}}
         </h1>
-        <h2>
+        <h1 class="res">    
+            {{{h1r}}}
+        </h1>
+        <h2 class="def">
             {{{h2}}}
+        </h2>
+        <h2 class="res">
+            {{{h2r}}}
         </h2>
         <div class="container_btn">
           <div class="readme">
@@ -70,7 +76,7 @@
                 {{{readme_3_h4}}}
               </h4>
               <p>
-                {{{readme_2_p}}}
+                {{{readme_3_p}}}
               </p>
             </div>
           </div>
