--- a/style/style.css
+++ b/style/style.css
@@ -110,6 +110,11 @@ body {
   justify-content: flex-start;
   flex-direction: row;
 }
+
+.home_2 .res {
+  display: none;
+}
+
 .home_2 h1 {
   background-color: #f6f6f6;
   color: black;
@@ -146,7 +151,11 @@ body {
   font-size: 14;
   font-weight: 400;
   line-height: 1.4rem;
+  letter-spacing: 1px;
   margin: 0;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .home_2 .index {
@@ -292,6 +301,7 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+
   .home_1 {
     flex-direction: column-reverse;
     padding-left: 5%;
@@ -323,6 +333,14 @@ body {
     font-size: 3.2rem;
     padding-left: 0;
     width: fit-content;
+  }
+
+  .home_2 .res {
+    display: block;
+  }
+
+  .home_2 .def {
+    display: none;
   }
 
   .home_2 .container h1 {
