--- a/templates/footer.handlebars
+++ b/templates/footer.handlebars
@@ -17,7 +17,7 @@
             <div class="redes">
                 <a>walter@wwclatam.com</a>
                 <a>Instagram</a>
-                <a>Linkedin</a>
+                <a href="https://www.linkedin.com/company/w-world-consulting">Linkedin</a>
             </div>
         </div>
     </div>
