--- a/style/responsiveNav.css
+++ b/style/responsiveNav.css
@@ -211,9 +211,9 @@
  }
  
  .window .header ul.menu li.menu-item:nth-child(7) a {
-	 width: 45px;
+	 width: 30px;
 	 margin-right: 2rem;
- }
+}
 
 .window .header.menu-opened .icon.icon-bag {
 	 transform: translateX(75px);
@@ -246,6 +246,25 @@
 
 .window .content img:nth-of-type(2) {
 	 margin: 75px auto;
+}
+
+.window .header ul.menu li.menu-item:nth-child(9) {
+	margin-top: -3rem;
+	display: flex;
+    flex-direction: row;
+	border: none;
+	width: fit-content;
+}
+
+.window .header ul.menu li.menu-item:nth-child(9) input {
+	background-color: black;
+	color: white;
+	border: 1px solid white;
+	border-radius: 20%;
+	width: 40px;
+	height: 40px;
+	font-size: 1rem;
+	margin-right: 1rem;
 }
 
 @media (max-width: 1150px) {
