--- a/style/cases.css
+++ b/style/cases.css
@@ -224,6 +224,9 @@ body {
     .navRes {
         display: block;
     }
+    .container .case .caseImg .century {
+        width: auto;
+    }
   
 }
 
