cambios de textos y banderas agregadas.

--- a/templates/nav.handlebars
+++ b/templates/nav.handlebars
@@ -4,8 +4,8 @@
                 <a class="ig" id="ig">instagram</a>
                 <a href="https://www.linkedin.com/company/w-world-consulting" target="_blank" class="ld" id="ld">linkedin</a>
                 <select name="" id="language" class="language" onchange="reloadPage()">
-                    <option value="es">Español</option>
-                    <option value="en">English</option>
+                    <option value="en">English 🇺🇸</option>
+                    <option value="es">Español 🇪🇸</option>
                 </select>
             </nav>
         </div>
