--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -2,14 +2,19 @@
         <article>
             {{{team_text_1}}}
         </article>
-        <img src="img/teamImg1.png" alt="">
+        <br>
+        <br>
         <p>ALDP Program Boston Scientific.</p>
+        <p>Executive Commitee Boston Scientific, 2014</p>
+        <img src="img/teamImg1.png" alt="">
         <br>
         <br>
         <article>
             {{{team_text_2}}}
         </article>
-        <img src="img/teamImg.png" alt="">
+        <br>
+        <br>
         <p>Mike Mahoney | CEO de Boston Scientific</p>
         <p>Ortíz | Presidente Latam de Boston Scientific</p>
+        <img src="img/teamImg.png" alt="">
       </div>  
