--- a/style/case.css
+++ b/style/case.css
@@ -50,9 +50,10 @@ body {
 }
 
 .bodyCase .textCase .hidden {
+    display: none;
     font-size: 0.8rem;
     margin: 0;
-    margin-top: -1rem;
+    height: 20px;
     display: none;
 }
 
@@ -172,8 +173,13 @@ body {
     .bodyCase {
         flex-direction: column;
     }
+
     .bodyCase .img .hidden {
         display: none;
+    }
+
+    .bodyCase .textCase .hidde {
+        display: block;
     }
 
     .bodyCase .textCase .hidden {
@@ -239,6 +245,7 @@ body {
     .bodyCase .img {
         margin: 0;
         margin-right: 0.5rem;
+        margin-top: -2rem;
     }
 
     .bodyCase .textCase .img1,
