--- a/templates/person.handlebars
+++ b/templates/person.handlebars
@@ -8,6 +8,8 @@
             <h4 class="personName">{{{personName}}}</h4>
             <article class="description">
                 {{{description}}} 
+                {{{description_more}}} 
+                {{{read_more}}} 
             </article>
             <div class="redes">
                 {{{redes}}}
