--- a/style/person.css
+++ b/style/person.css
@@ -49,6 +49,18 @@
     font-size: 1rem;
 }
 
+.personContainer .text .hidde {
+    display: none;
+}
+
+.personContainer .text .btn_more {
+    background-color: transparent;
+    border: none;
+    color: royalblue;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
 .personContainer .text .redes {
     margin-top: 1rem;
     display: flex;
